--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
     </script>
   </head>
   <body>
-    <h1>Scottish Munros</h1>
+    <header>
+      <h1 id="logo">Scottish Munros</h1>
+    </header>
+    <section id="munros"></section>
   </body>
 </html>
