Regions dropdown added with unique region filter

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,18 @@
     </script>
   </head>
   <body>
+
     <header>
       <h1 id="logo">Scottish Munros</h1>
     </header>
+
+
+    <label>Select a Region</label>
+    <select id="munro-regions">
+      <option disabled selected></option>
+    </select>
+
     <section id="munros"></section>
+
   </body>
 </html>
